--- a/efpt.config.json
+++ b/efpt.config.json
@@ -4,14 +4,14 @@
    "ContextNamespace": null,
    "DefaultDacpacSchema": null,
    "FilterSchemas": false,
-   "IncludeConnectionString": true,
+   "IncludeConnectionString": false,
    "ModelNamespace": null,
    "OutputContextPath": null,
    "OutputPath": null,
    "ProjectRootNamespace": "IntelliCRMAPIService",
    "Schemas": null,
    "SelectedHandlebarsLanguage": 0,
-   "SelectedToBeGenerated": 2,
+   "SelectedToBeGenerated": 0,
    "Tables": [
       {
          "Name": "public.users",
@@ -19,6 +19,10 @@
       },
       {
          "Name": "public.userdetails",
+         "ObjectType": 0
+      },
+      {
+         "Name": "public.customerproduct",
          "ObjectType": 0
       }
    ],
